--- a/Views/LanguageSelectionWindow.xaml
+++ b/Views/LanguageSelectionWindow.xaml
@@ -270,6 +270,12 @@
                     </StackPanel>
                 </GroupBox>
             </StackPanel>
+            <TextBlock HorizontalAlignment="Right" Margin="0,0,20,0"
+                       x:Name="HelpLinkLang" ToolTipService.ToolTip="HelpLinkLangToolTip">
+                <Hyperlink NavigateUri="https://note.com/alert_zephyr9426/n/n602eead0686c" RequestNavigate="Hyperlink_RequestNavigate">
+                    <Run x:Name="HelpLinkText" Text="（初期値）" />
+                </Hyperlink>
+            </TextBlock>
         </StackPanel>
     </Grid>
 </Window>
