--- a/Views/LanguageSelectionWindow.xaml
+++ b/Views/LanguageSelectionWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ResourceMaker.UI"
         mc:Ignorable="d"
         SizeToContent="WidthAndHeight"
-        Name="LanguageManageWindow" Title="" MinHeight="450" MinWidth="800">
+        Name="LanguageManageWindow" Title="aa" MinHeight="450" MinWidth="800">
     <Grid>
         <StackPanel Orientation="Vertical">
             <StackPanel x:Name="ProjectTypePanel" >
@@ -156,7 +156,7 @@
             <StackPanel x:Name="FileControl" Orientation="Horizontal" Margin="10" HorizontalAlignment="Left">
 
                 <!-- CSV出力 -->
-                <GroupBox Header="CSV" Margin="0,0,10,0" Width="300">
+                <GroupBox Header="CSV" Margin="0,0,10,0" >
                     <StackPanel Orientation="Vertical" Margin="10">
 
                         <!-- 出力形式と出力先を横並びに -->
@@ -174,19 +174,21 @@
                             </StackPanel>
 
                             <!-- 出力先 -->
-                            <StackPanel Orientation="Vertical">
+                            <StackPanel Orientation="Vertical" Margin="5,0,20,0">
                                 <TextBlock x:Name="CsvOutputPath" Text="出力先を選択：" FontWeight="Bold" Margin="0,0,0,5"/>
                                 <RadioButton x:Name="RBSameFolder" Content="同じフォルダ" GroupName="CsvTarget" Click="CsvRadioButton_Click" Margin="5,2"/>
                                 <RadioButton x:Name="RBPrjTop" Content="プロジェクトトップ" GroupName="CsvTarget" Click="CsvRadioButton_Click" Margin="5,2"/>
                                 <RadioButton x:Name="RBClipboard" Content="クリップボード" GroupName="CsvTarget" Tag="Clipboard" Click="CsvRadioButton_Click" Margin="5,2"/>
+                                <RadioButton x:Name="RBSlectFile" Content="保存先を指定" GroupName="CsvTarget" Tag="Picker" Click="CsvRadioButton_Click" Margin="5,2"/>
                             </StackPanel>
                         </StackPanel>
 
                         <!-- 出力ボタンとオプション -->
                         <StackPanel Orientation="Vertical">
-                            <Button x:Name="BtnCsvOut" Content="CSV出力" Margin="0,10,0,0" HorizontalAlignment="Left"
+                            <Button x:Name="BtnCsvOut" Content="CSV出力" Margin="0,10,0,5" HorizontalAlignment="Left"
                                 Click="BtnCsvOut_Click"/>
-                            <CheckBox x:Name="ChkWithHeader" Content="一つのファイルにまとめる" Click="CsvRadioButton2_Click"
+                            <CheckBox x:Name="ChkWithHeader" 
+                                      Content="一つのファイルにまとめる"
                                 ToolTipService.ToolTip="ChkWithHeaderToolTip"/>
                         </StackPanel>
 
@@ -195,10 +197,12 @@
                             <Button x:Name="GetCsv" Content="CSV取り込み" Margin="0,10,10,0" Click="BtnCsvGet" HorizontalAlignment="Left"/>
                             <StackPanel Orientation="Horizontal">
                                 <Button x:Name="ImportFromClipboard" Content="クリップボードから取り込み" Margin="0,5,10,0" Tag="Clip" Click="BtnCsvGet" HorizontalAlignment="Left"/>
+                                <StackPanel Orientation="Horizontal" Visibility="Collapsed">
                                 <TextBlock x:Name="LblCultureCode" Text="カルチャコード" Margin="0,5,5,0" VerticalAlignment="Center"/>
                                 <TextBox Name="ClipLangCode" 
                                          ToolTipService.ToolTip="ClipLangCodeToolTip" 
                                          VerticalAlignment="Center" Width="50"/>
+                                </StackPanel>
                                 
                             </StackPanel>
                         </StackPanel>
@@ -272,7 +276,7 @@
             </StackPanel>
             <TextBlock HorizontalAlignment="Right" Margin="0,0,20,0"
                        x:Name="HelpLinkLang" ToolTipService.ToolTip="HelpLinkLangToolTip">
-                <Hyperlink NavigateUri="https://note.com/alert_zephyr9426/n/n602eead0686c" RequestNavigate="Hyperlink_RequestNavigate">
+                <Hyperlink x:Name="HelpUrlLang" NavigateUri="https://note.com/alert_zephyr9426/n/n602eead0686c" RequestNavigate="Hyperlink_RequestNavigate">
                     <Run x:Name="HelpLinkText" Text="（初期値）" />
                 </Hyperlink>
             </TextBlock>
